save all pre data with sharedprefs, ready to insert sqlite

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,14 @@
             android:name="fr.esgi.esgi_todo.InitialDatePickerActivity"
             android:label="@string/title_activity_initial_date_picker" >
         </activity>
+        <activity
+            android:name="fr.esgi.esgi_todo.CategoryActivity"
+            android:label="@string/title_activity_category" >
+        </activity>
+        <activity
+            android:name="fr.esgi.esgi_todo.PriorityActivity"
+            android:label="@string/title_activity_priority" >
+        </activity>
     </application>
 
 </manifest>
